src/snapshots/min_2__tokens__math.snap
---
source: src/main.rs
expression: "&r.tokens"
---
Tokens {
    index: RefCell {
        value: 49,
    },
    tokens: [
        IMPORT(
            Token {
                raw: "import",
                position: Position {
                    column: 0,
                    line: 1,
                },
            },
        ),
        COL(
            Token {
                raw: ":",
                position: Position {
                    column: 6,
                    line: 1,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`@std/util`",
                position: Position {
                    column: 8,
                    line: 1,
                },
            },
        ),
        CBRACKETOPEN(
            Token {
                raw: "{",
                position: Position {
                    column: 19,
                    line: 1,
                },
            },
        ),
        IDENT(
            Token {
                raw: "pipe",
                position: Position {
                    column: 21,
                    line: 1,
                },
            },
        ),
        CBRACKETCLOSE(
            Token {
                raw: "}",
                position: Position {
                    column: 26,
                    line: 1,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 27,
                    line: 1,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`@std/math`",
                position: Position {
                    column: 4,
                    line: 2,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 15,
                    line: 2,
                },
            },
        ),
        PUB(
            Token {
                raw: "pub",
                position: Position {
                    column: 0,
                    line: 3,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`+`",
                position: Position {
                    column: 4,
                    line: 3,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 7,
                    line: 3,
                },
            },
        ),
        IDENT(
            Token {
                raw: "a",
                position: Position {
                    column: 8,
                    line: 3,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 9,
                    line: 3,
                },
            },
        ),
        IDENT(
            Token {
                raw: "b",
                position: Position {
                    column: 11,
                    line: 3,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 12,
                    line: 3,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 14,
                    line: 3,
                },
            },
        ),
        TYPESCRIPT(
            Token {
                raw: "#a + b#",
                position: Position {
                    column: 16,
                    line: 3,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 23,
                    line: 3,
                },
            },
        ),
        PUB(
            Token {
                raw: "pub",
                position: Position {
                    column: 0,
                    line: 5,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`-`",
                position: Position {
                    column: 4,
                    line: 5,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 7,
                    line: 5,
                },
            },
        ),
        IDENT(
            Token {
                raw: "a",
                position: Position {
                    column: 8,
                    line: 5,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 9,
                    line: 5,
                },
            },
        ),
        IDENT(
            Token {
                raw: "b",
                position: Position {
                    column: 11,
                    line: 5,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 12,
                    line: 5,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 14,
                    line: 5,
                },
            },
        ),
        TYPESCRIPT(
            Token {
                raw: "#a - b#",
                position: Position {
                    column: 16,
                    line: 5,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 23,
                    line: 5,
                },
            },
        ),
        PUB(
            Token {
                raw: "pub",
                position: Position {
                    column: 0,
                    line: 7,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`*`",
                position: Position {
                    column: 4,
                    line: 7,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 7,
                    line: 7,
                },
            },
        ),
        IDENT(
            Token {
                raw: "a",
                position: Position {
                    column: 8,
                    line: 7,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 9,
                    line: 7,
                },
            },
        ),
        IDENT(
            Token {
                raw: "b",
                position: Position {
                    column: 11,
                    line: 7,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 12,
                    line: 7,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 14,
                    line: 7,
                },
            },
        ),
        TYPESCRIPT(
            Token {
                raw: "#a * b#",
                position: Position {
                    column: 16,
                    line: 7,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 23,
                    line: 7,
                },
            },
        ),
        PUB(
            Token {
                raw: "pub",
                position: Position {
                    column: 0,
                    line: 9,
                },
            },
        ),
        RAWIDENT(
            Token {
                raw: "`/`",
                position: Position {
                    column: 4,
                    line: 9,
                },
            },
        ),
        BRACKETOPEN(
            Token {
                raw: "(",
                position: Position {
                    column: 7,
                    line: 9,
                },
            },
        ),
        IDENT(
            Token {
                raw: "a",
                position: Position {
                    column: 8,
                    line: 9,
                },
            },
        ),
        COMMA(
            Token {
                raw: ",",
                position: Position {
                    column: 9,
                    line: 9,
                },
            },
        ),
        IDENT(
            Token {
                raw: "b",
                position: Position {
                    column: 11,
                    line: 9,
                },
            },
        ),
        BRACKETCLOSE(
            Token {
                raw: ")",
                position: Position {
                    column: 12,
                    line: 9,
                },
            },
        ),
        EQUAL(
            Token {
                raw: "=",
                position: Position {
                    column: 14,
                    line: 9,
                },
            },
        ),
        TYPESCRIPT(
            Token {
                raw: "#a / b#",
                position: Position {
                    column: 16,
                    line: 9,
                },
            },
        ),
        SEMI(
            Token {
                raw: ";",
                position: Position {
                    column: 23,
                    line: 9,
                },
            },
        ),
    ],
}
